--- a/config/packages/dev/easy_log_handler.yaml
+++ b/config/packages/dev/easy_log_handler.yaml
@@ -12,5 +12,5 @@ services:
 #            channels: ['!event']
 #            level:    debug
 #        easylog:
-#            type: service
+#            type: Service
 #            id:   EasyCorp\EasyLog\EasyLogHandler
